--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,18 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+
+			<plugin>
+				<groupId>io.qameta.allure</groupId>
+				<artifactId>allure-maven</artifactId>
+				<version>2.8</version>
+				<configuration>
+					<!-- <propertiesFilePath>src/test/resources/allure.properties</propertiesFilePath> -->
+					<reportVersion>2.3.1</reportVersion>
+					<resultsDirectory>D:\\git\\allure-testng-sample\\allure-results</resultsDirectory>
+					<reportDirectory>./target/allure-report</reportDirectory>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
